--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="love running, running club, ireland, dublin">
+
+    <link rel="stylesheet" href="assets/css/style.css"></link>
+    <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <h1 id="logo">Love Running</h1>
+        <nav>
+            <li>
+                <ul>
+                    <a href=""></a>
+                </ul>
+                <ul>
+                    <a href=""></a>
+                </ul>
+                <ul>
+                    <a href=""></a>
+                </ul>
+            </li>
+        </nav>
+    </header>
+    <section>main image</section>
+    <section>club ethos</section>
+    <section>running locations, distances and times</section>
+    <footer>social links here</footer>
 </body>
 </html>
