added CSS styling and HTML

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <header>
         <h1 id="logo">Love Running</h1>
         <nav>
-            <li>
-                <ul>
-                    <a href=""></a>
-                </ul>
-                <ul>
-                    <a href=""></a>
-                </ul>
-                <ul>
-                    <a href=""></a>
-                </ul>
-            </li>
+            <ul id="menu">
+                <li>
+                    <a href="">Sign Up</a>
+                </li>
+                <li>
+                    <a href="">Gallery</a>
+                </li>
+                <li>
+                    <a href="" class="active">Home</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <section>main image</section>
