--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             </ul>
         </nav>
     </header>
-    <section>main image</section>
+    <section>
+        <div id="hero-image">
+
+        </div>
+    </section>
     <section>club ethos</section>
     <section>running locations, distances and times</section>
     <footer>social links here</footer>
