--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div id="hero-image">
-
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Pheonix Park</h3>
         </div>
     </section>
-    <section>club ethos</section>
+    <section id="club-ethos">
+        <h1>Why Love Running with Us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
+    </section>
     <section>running locations, distances and times</section>
     <footer>social links here</footer>
 </body>
